# frugurt

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  todo.md
.github/workflows/: code_quality.yaml  documentation.yaml
converter/: converter.cabal  fourmolu.yaml  stack.yaml
converter/src/: Debugize.hs  Jsonize.hs  Main.hs  Tokenize.hs  Treeanize.hs
docs/: book.toml
docs/highlighter/: highlighter-info.js  highlighter.js  tree-sitter-frugurt.wasm
docs/src/: SUMMARY.md
fru-highlight/: Cargo.toml  tests.md
fru-highlight/src/: highlight.rs  main.rs
frugurt-macros/: Cargo.toml
frugurt-macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
obsidian/: FIXME.canvas  TODO.canvas  TOTHINK.canvas
rfruit/: Cargo.toml  todo.md
rfruit/src/: helpers.rs  main.rs
rfruit/tests/: function_tests.rs  mod.rs  operators_tests.rs
src/: helpers.rs  main.rs
src/interpreter/: ast_helpers.rs  ast_json_parser.rs  control.rs  error.rs  expression.rs  identifier.rs  mod.rs  runner.rs  scope.rs  statement.rs  tree_sitter_parser.rs
src/stdlib/: mod.rs
tests/: control_tests.rs  expression_tests.rs  function_tests.rs  if_expression_tests.rs  if_statement_tests.rs  lib.rs  mod.rs  oop_tests.rs  operators_tests.rs  return_statement_tests.rs  scoping_tests.rs  value_tests.rs  variable_tests.rs  while_statement_tests.rs  while_tests.rs
tests/builtin/: asset_eq_tests.rs  mod.rs
tests/expression/: binary_expression_tests.rs  block_expression_tests.rs  call_expression_tests.rs  curry_call_expression_tests.rs  function_expression_tests.rs  if_expression_tests.rs  instantiation_expression_tests.rs  mod.rs  prop_access_tests.rs  variable_expression_tests.rs
tests/literal_expression/: literal_bool_tests.rs  literal_nah_tests.rs  literal_number_tests.rs  literal_string_tests.rs  mod.rs
tests/oop/: class_tests.rs  data_tests.rs  general_tests.rs  mod.rs  property_tests.rs  static_tests.rs  struct_tests.rs
tests/scope_manipulation/: basics.rs
tests/statement/: break_statement_tests.rs  continue_statement_tests.rs  if_statement_tests.rs  let_set_statement_tests.rs  mod.rs  return_statement_tests.rs  (+1 more)
(+91 files in other folders)
