[package]
name = "frugurt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
serde_json = "1.0.115"
thiserror = "1.0.58"
tree-sitter = "0.22.5"
proc-macro2 = "1.0.78"
tree-sitter-frugurt = "0.0.3"
#tree-sitter-frugurt = { path = "../tree-sitter-frugurt" }

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
cc = "*"
