[workspace]
members = ["frugurt-macros"]

[package]
name = "frugurt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
ctor = "0.2.8"
once_cell = "1.19.0"
snailquote = "0.3.1"
thiserror = "1.0.61"
tree-sitter = "0.22.6"
#tree-sitter-frugurt = "0.0.11"
tree-sitter-frugurt = { path = "../tree-sitter-frugurt" }
uid = "0.1.7"
frugurt-macros = { path = "frugurt-macros" }

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
cc = "*"

[[test]]
name = "integration"
harness = true
path = "tests/lib.rs"
