cabal-version: 3.8
name:          converter
version:       0.1.0.0
homepage:      https://github.com/leokostarev/frugurt-lang
license:       MIT
author:        Leonid Kostarev
maintainer:    leokostarev@mail.ru
copyright:     2024 Leonid Kostarev
build-type:    Simple
category:      Parser

executable converter
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Debugize
    Jsonize
    Tokenize
    Treeanize

  default-language: Haskell2010
  build-depends:
    , aeson
    , base        >=4.7 && <5
    , binary
    , bytestring
    , containers
    , megaparsec
    , parsec
    , scientific
    , text

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
